--- a/article.html
+++ b/article.html
@@ -8,6 +8,9 @@
         <script async
             src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1479958662233843"
             crossorigin="anonymous"></script>
+
+            <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1479958662233843"
+     crossorigin="anonymous"></script>
     </head>
     <body>
         <nav>
