--- a/index.html
+++ b/index.html
@@ -10,8 +10,11 @@
             src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1479958662233843"
             crossorigin="anonymous"></script>
 
-            <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1479958662233843"
-     crossorigin="anonymous"></script>
+        <script async
+            src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1479958662233843"
+            crossorigin="anonymous"></script>
+
+        <link rel="icon" type="image/png" href="grigo.ico" />
     </head>
     <body>
 
