--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1479958662233843"
             crossorigin="anonymous"></script>
 
-        <link rel="icon" type="image/png" href="grigo.ico" />
+        <link rel="icon" type="image/png" href="favicon-64.ico" />
     </head>
     <body>
 
