--- a/article.html
+++ b/article.html
@@ -11,13 +11,21 @@
 
             <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1479958662233843"
      crossorigin="anonymous"></script>
+     <script src="index.js" defer></script>
+       
     </head>
     <body>
         <nav>
-            <a href="index.html">Accueil</a>
-            <a href="article.html">Électroménagers à prix choc</a>
-            <a href="#">Contact</a>
-            <a href="#">À propos</a>
+            <div class="navbar-container">
+                <a  class="logo">Electroménagers</a>
+                <div class="menu-icon" id="menuIcon">☰</div>
+                <ul class="nav-links" id="navLinks">
+                    <li><a href="index.html">Accueil</a></li>
+                    <li><a href="article.html">Électroménagers à prix choc</a></li>
+                    <li><a href="aporpos.html">À propos</a></li>
+                    <li><a href="contact.html">Contact</a></li>
+                </ul>
+            </div>
         </nav>
 
         <header>
