--- a/article.html
+++ b/article.html
@@ -12,6 +12,7 @@
             <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1479958662233843"
      crossorigin="anonymous"></script>
      <script src="index.js" defer></script>
+     <link rel="icon" type="image/png" href="favicon-64.ico" />
        
     </head>
     <body>
