--- a/contact.html
+++ b/contact.html
@@ -9,6 +9,7 @@
             src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1479958662233843"
             crossorigin="anonymous"></script>
     <script src="index.js" defer></script>
+    <link rel="icon" type="image/png" href="favicon-64.ico" />
 </head>
 <body>
     <nav>
